# aoc2022

./: .gitignore  README.md
2022/: README.md
2022/day02/: Dockerfile  main.lua
2022/day03/: Dockerfile  main.hs
2022/day05/: Dockerfile  Program.cs
2022/day06/: Dockerfile
2022/day08/: main.dart
2022/day09/: Dockerfile  main.fs  main.fsproj
2022/day1/: Dockerfile  main.go  main.rkt
2022/day10/: Dockerfile  main.jl
2022/day11/: Dockerfile  main.exs
2022/day12/: Dockerfile  main.groovy
2022/day13/: Dockerfile  main.nim
2022/day14/: Dockerfile  main.php
2022/day15/: Dockerfile  main.pl
2022/day16/: main.swift
2022/day18/: Dockerfile  main.clj  main.sc
2022/day2/: main.swift
2022/day20/: Dockerfile  main.go
2022/day21/: Dockerfile  main.rs
2022/day3/: main.hs
2022/day4/: Dockerfile  (+1 more)
2022/day6/day6/: dune-project
2022/day6/day6/_build/: .db  .digest-db  log
2022/day6/day6/_build/default/: day6.dune-package
2022/day6/day6/_build/default/.dune/: configurator  configurator.v2
2022/day6/day6/_build/default/lib/: day6.cma  day6.cmxa  day6.cmxs
2022/day6/day6/_build/default/lib/.day6.objs/byte/: day6.cmi  day6.cmo  day6.cmt
2022/day6/day6/_build/default/lib/.day6.objs/native/: day6.cmx
2022/day6/day6/_build/default/lib/.formatted/: dune
2022/day6/day6/_build/default/lib/.merlin-conf/: lib-day6
2022/day6/day6/_build/default/test/.day6.eobjs/byte/: dune__exe__Day6.cmi  dune__exe__Day6.cmti
2022/day6/day6/_build/default/test/.day6.eobjs/native/: dune__exe__Day6.cmx
2022/day6/day6/_build/default/test/.merlin-conf/: exe-day6
(+7 files in other folders)
